[package]
name = "gomoku-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
log = "*"
env_logger = "*"
futures-util = "*"
once_cell = "*"